# personal-knowledge-agent

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  start_daemon.sh
clients/chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js
clients/vscode-extension/: package.json
clients/vscode-extension/src/: extension.ts  panel.ts  ragClient.ts
connectors/: __init__.py  drive.py
daemon/: __init__.py  auth_token.py  registry.py  server.py
personal_knowledge_agent/: auth.py  cli.py  config.py  context.py  drive.py  embeddings.py  index_store.py  ingest.py  llm.py  notion.py  parsers.py  retrieval.py  schemas.py  vector_store.py
personal_knowledge_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_index_store_generations.py
