[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-knowledge-agent"
version = "0.1.0"
description = "Terminal-first personal RAG assistant for developers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.2.0"]
epub = ["ebooklib>=0.18", "beautifulsoup4>=4.12.0"]
retrieval = ["sentence-transformers>=3.0.0", "numpy>=1.26.0"]
full = [
  "pypdf>=4.2.0",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
]

[project.scripts]
pka = "personal_knowledge_agent.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["personal_knowledge_agent*"]
